Fix contact form textarea resizing... ...could previously overflow container horizontally. Now container correcly adjusts to fit it. Add robots.txt. Customize textarea focus-within outlines. (Now with accent color!)

--- a/public_static/css/components/_buttons_and_input.scss
+++ b/public_static/css/components/_buttons_and_input.scss
@@ -54,6 +54,12 @@ input[type=email]{
   border: 1px solid var(--color-base-1);
   padding: 0.5em;
   border-radius: 0.25rem;
+
+  outline-color: var(--color-accent-1);
+  &:focus-within {
+    outline-style: solid;
+    outline-width: medium;
+  }
 }
 
 input,
