--- a/public_static/css/core_style.css
+++ b/public_static/css/core_style.css
@@ -145,6 +145,13 @@ input[type=email] {
   border: 1px solid var(--color-base-1);
   padding: 0.5em;
   border-radius: 0.25rem;
+  outline-color: var(--color-accent-1);
+}
+textarea:focus-within,
+input[type=text]:focus-within,
+input[type=email]:focus-within {
+  outline-style: solid;
+  outline-width: medium;
 }
 
 input,
